chore: small contrast fixes (#3642)
* contrast fixes

* fix type import

--- a/packages/compass-schema/src/components/compass-schema/compass-schema.module.less
+++ b/packages/compass-schema/src/components/compass-schema/compass-schema.module.less
@@ -8,7 +8,7 @@
 @mc-blue4: lighten(@mc-blue0, 30%);
 @mc-blue5: lighten(@mc-blue0, 37.5%);
 
-@mc-bg: @palette__gray--light-3;
+@mc-bg: @palette__gray--light-2;
 @mc-fg: @mc-blue0;
 @mc-fg-selected: @palette__yellow--base;
 @mc-fg-unselected: @palette__gray--light-2;
